# publisher/controllers.go
@@ -2,15 +2,11 @@
 package main
 
 import (
-	"context"
 	"errors"
 	"log"
 
 	ut "github.com/go-playground/universal-translator"
-	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
-	"github.com/google/uuid"
-	"github.com/thiago-felipe-99/mail/rabbit"
 )
 
 var (
@@ -23,69 +19,10 @@ type sent struct {
 	Message string `json:"message" bson:"message"`
 }
 
-type receiver struct {
-	Name  string `json:"name"  bson:"name"  validate:"required"`
-	Email string `json:"email" bson:"email" validate:"required,email"`
-}
-
-type template struct {
-	Name string            `json:"name" bson:"name" validate:"required"`
-	Data map[string]string `json:"data" bson:"data"`
-}
-
-//nolint:lll
-type email struct {
-	ID             uuid.UUID  `json:"-"              bson:"_id"`
-	Receivers      []receiver `json:"receivers"      bson:"receivers"       validate:"required_without=BlindReceivers"`
-	BlindReceivers []receiver `json:"blindReceivers" bson:"blind_receivers" validate:"required_without=Receivers"`
-	Subject        string     `json:"subject"        bson:"subject"         validate:"required"`
-	Message        string     `json:"message"        bson:"message"         validate:"required_without=Template,excluded_with=Template"`
-	Template       *template  `json:"template"       bson:"template"        validate:"required_without=Message,excluded_with=Message"`
-	Attachments    []string   `json:"attachments"    bson:"attachments"`
-}
-
 type queueController struct {
-	rabbit     *rabbit.Rabbit
-	validate   *validator.Validate
-	database   *database
 	translator *ut.UniversalTranslator
 	languages  []string
 	core       *queueCore
-}
-
-func (controller *queueController) bodyParser(body any, handler *fiber.Ctx) error {
-	err := handler.BodyParser(body)
-	if err != nil {
-		return errBodyValidate
-	}
-
-	err = controller.validate.Struct(body)
-	if err != nil {
-		validationErrs := validator.ValidationErrors{}
-
-		okay := errors.As(err, &validationErrs)
-		if !okay {
-			return errBodyValidate
-		}
-
-		accept := handler.AcceptsLanguages(controller.languages...)
-		if accept == "" {
-			accept = controller.languages[0]
-		}
-
-		language, _ := controller.translator.GetTranslator(accept)
-
-		messages := validationErrs.Translate(language)
-
-		messageSend := ""
-		for _, message := range messages {
-			messageSend += "\n" + message
-		}
-
-		return errors.New(messageSend) //nolint: goerr113
-	}
-
-	return nil
 }
 
 type queueBody struct {
@@ -106,44 +43,42 @@ type queueBody struct {
 // @Param			queue	body		queueBody	true	"queue params"
 // @Router			/email/queue [post]
 // @Description	Creating a RabbitMQ queue with DLX.
-func (controller *queueController) create() func(*fiber.Ctx) error {
-	return func(handler *fiber.Ctx) error {
-		body := &queueBody{
-			MaxRetries: 10, //nolint:gomnd
-		}
-
-		err := handler.BodyParser(body)
-		if err != nil {
-			return handler.Status(fiber.StatusBadRequest).JSON(sent{err.Error()})
-		}
-
-		err = controller.core.create(*body)
-		if err != nil {
-			if errors.Is(err, errQueueAlreadyExist) {
-				return handler.Status(fiber.StatusConflict).JSON(sent{errQueueAlreadyExist.Error()})
-			}
-
-			modelInvalid := modelInvalidError{}
-			if okay := errors.As(err, &modelInvalid); okay {
-				accept := handler.AcceptsLanguages(controller.languages...)
-				if accept == "" {
-					accept = controller.languages[0]
-				}
-
-				language, _ := controller.translator.GetTranslator(accept)
-
-				return handler.Status(fiber.StatusBadRequest).
-					JSON(sent{modelInvalid.Translate(language)})
-			}
-
-			log.Printf("[ERROR] - Error creating queue: %s", err)
-
-			return handler.Status(fiber.StatusInternalServerError).
-				JSON(sent{"error creating queue"})
-		}
-
-		return handler.Status(fiber.StatusCreated).JSON(sent{"queue created"})
+func (controller *queueController) create(handler *fiber.Ctx) error {
+	body := &queueBody{
+		MaxRetries: 10, //nolint:gomnd
 	}
+
+	err := handler.BodyParser(body)
+	if err != nil {
+		return handler.Status(fiber.StatusBadRequest).JSON(sent{err.Error()})
+	}
+
+	err = controller.core.create(*body)
+	if err != nil {
+		if errors.Is(err, errQueueAlreadyExist) {
+			return handler.Status(fiber.StatusConflict).JSON(sent{errQueueAlreadyExist.Error()})
+		}
+
+		modelInvalid := modelInvalidError{}
+		if okay := errors.As(err, &modelInvalid); okay {
+			accept := handler.AcceptsLanguages(controller.languages...)
+			if accept == "" {
+				accept = controller.languages[0]
+			}
+
+			language, _ := controller.translator.GetTranslator(accept)
+
+			return handler.Status(fiber.StatusBadRequest).
+				JSON(sent{modelInvalid.Translate(language)})
+		}
+
+		log.Printf("[ERROR] - Error creating queue: %s", err)
+
+		return handler.Status(fiber.StatusInternalServerError).
+			JSON(sent{"error creating queue"})
+	}
+
+	return handler.Status(fiber.StatusCreated).JSON(sent{"queue created"})
 }
 
 // Getting all RabbitMQ queues
@@ -156,18 +91,16 @@ func (controller *queueController) create() func(*fiber.Ctx) error {
 // @Failure		500		{object}	sent "internal server error"
 // @Router			/email/queue [get]
 // @Description	Getting all RabbitMQ queues.
-func (controller *queueController) getAll() func(*fiber.Ctx) error {
-	return func(handler *fiber.Ctx) error {
-		queues, err := controller.core.getAll()
-		if err != nil {
-			log.Printf("[ERROR] - Error getting all queues: %s", err)
+func (controller *queueController) getAll(handler *fiber.Ctx) error {
+	queues, err := controller.core.getAll()
+	if err != nil {
+		log.Printf("[ERROR] - Error getting all queues: %s", err)
 
-			return handler.Status(fiber.StatusInternalServerError).
-				JSON(sent{"error getting queue"})
-		}
-
-		return handler.JSON(queues)
+		return handler.Status(fiber.StatusInternalServerError).
+			JSON(sent{"error getting queue"})
 	}
+
+	return handler.JSON(queues)
 }
 
 // Delete a queue with DLX
@@ -181,22 +114,20 @@ func (controller *queueController) getAll() func(*fiber.Ctx) error {
 // @Failure		500		{object}	sent "internal server error"
 // @Router			/email/queue/{name} [delete]
 // @Description	Delete a queue with DLX.
-func (controller *queueController) delete() func(*fiber.Ctx) error {
-	return func(handler *fiber.Ctx) error {
-		err := controller.core.delete(handler.Params("name"))
-		if err != nil {
-			if errors.Is(err, errQueueDontExist) {
-				return handler.Status(fiber.StatusNotFound).JSON(sent{errQueueDontExist.Error()})
-			}
-
-			log.Printf("[ERROR] - Error deleting queue: %s", err)
-
-			return handler.Status(fiber.StatusInternalServerError).
-				JSON(sent{"error deletring queue"})
+func (controller *queueController) delete(handler *fiber.Ctx) error {
+	err := controller.core.delete(handler.Params("name"))
+	if err != nil {
+		if errors.Is(err, errQueueDontExist) {
+			return handler.Status(fiber.StatusNotFound).JSON(sent{errQueueDontExist.Error()})
 		}
 
-		return handler.JSON(sent{"queue deleted"})
+		log.Printf("[ERROR] - Error deleting queue: %s", err)
+
+		return handler.Status(fiber.StatusInternalServerError).
+			JSON(sent{"error deletring queue"})
 	}
+
+	return handler.JSON(sent{"queue deleted"})
 }
 
 // Sends an email to the RabbitMQ queue
@@ -210,48 +141,41 @@ func (controller *queueController) delete() func(*fiber.Ctx) error {
 // @Failure		404		{object}	sent "queue does not exist"
 // @Failure		500		{object}	sent "internal server error"
 // @Param			name	path	string		true	"queue name"
-// @Param			queue	body	email	true	"email"
-// @Router			/email/queue/{name}/send [post]
+// @Param			queue	body	emailModel	true	"email"
+// @Router			/email/queue/{name}/sendEmail [post]
 // @Description	Sends an email to the RabbitMQ queue.
-func (controller *queueController) send() func(*fiber.Ctx) error {
-	return func(handler *fiber.Ctx) error {
-		name := handler.Params("name")
+func (controller *queueController) sendEmail(handler *fiber.Ctx) error {
+	body := &emailModel{}
 
-		queueExist, err := controller.database.existQueue(name)
-		if err != nil {
-			log.Printf("[ERROR] - Error checking queue: %s", err)
-
-			return handler.Status(fiber.StatusInternalServerError).
-				JSON(sent{"error verifying queue"})
-		}
-
-		if !queueExist {
-			return handler.Status(fiber.StatusNotFound).JSON(sent{errQueueDontExist.Error()})
-		}
-
-		body := &email{}
-
-		err = controller.bodyParser(body, handler)
-		if err != nil {
-			return handler.Status(fiber.StatusBadRequest).JSON(sent{err.Error()})
-		}
-
-		err = controller.rabbit.SendMessage(context.Background(), name, body)
-		if err != nil {
-			log.Printf("[ERROR] - Error sending email: %s", err)
-
-			return handler.Status(fiber.StatusInternalServerError).
-				JSON(sent{"error send email"})
-		}
-
-		err = controller.database.saveEmail(*body)
-		if err != nil {
-			log.Printf("[ERROR] - Error saving email: %s", err)
-
-			return handler.Status(fiber.StatusInternalServerError).
-				JSON(sent{"error savving email"})
-		}
-
-		return handler.JSON(sent{"email sent"})
+	err := handler.BodyParser(body)
+	if err != nil {
+		return handler.Status(fiber.StatusBadRequest).JSON(sent{err.Error()})
 	}
+
+	err = controller.core.sendEmail(handler.Params("name"), *body)
+	if err != nil {
+		if errors.Is(err, errQueueDontExist) {
+			return handler.Status(fiber.StatusConflict).JSON(sent{errQueueDontExist.Error()})
+		}
+
+		modelInvalid := modelInvalidError{}
+		if okay := errors.As(err, &modelInvalid); okay {
+			accept := handler.AcceptsLanguages(controller.languages...)
+			if accept == "" {
+				accept = controller.languages[0]
+			}
+
+			language, _ := controller.translator.GetTranslator(accept)
+
+			return handler.Status(fiber.StatusBadRequest).
+				JSON(sent{modelInvalid.Translate(language)})
+		}
+
+		log.Printf("[ERROR] - Error sending email: %s", err)
+
+		return handler.Status(fiber.StatusInternalServerError).
+			JSON(sent{"error sending email"})
+	}
+
+	return handler.JSON(sent{"email sent"})
 }
