# publisher/docs/swagger.json
@@ -126,7 +126,7 @@
                 }
             }
         },
-        "/email/queue/{name}/send": {
+        "/email/queue/{name}/sendEmail": {
             "post": {
                 "description": "Sends an email to the RabbitMQ queue.",
                 "consumes": [
@@ -153,7 +153,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.email"
+                            "$ref": "#/definitions/main.emailModel"
                         }
                     }
                 ],
@@ -187,7 +187,7 @@
         }
     },
     "definitions": {
-        "main.email": {
+        "main.emailModel": {
             "type": "object",
             "required": [
                 "subject"
@@ -201,6 +201,7 @@
                 },
                 "blindReceivers": {
                     "type": "array",
+                    "minItems": 1,
                     "items": {
                         "$ref": "#/definitions/main.receiver"
                     }
@@ -210,6 +211,7 @@
                 },
                 "receivers": {
                     "type": "array",
+                    "minItems": 1,
                     "items": {
                         "$ref": "#/definitions/main.receiver"
                     }
